--- a/shoes_back_spring/src/main/resources/application.properties
+++ b/shoes_back_spring/src/main/resources/application.properties
@@ -1,1 +1,7 @@
 
+spring.datasource.url=jdbc:mysql://localhost:3306/shoes?serverTimezone=UTC&characterEncoding=UTF-8
+spring.datasource.username= root
+spring.datasource.password= !04938jsm
+spring.datasource.driver-class-name= com.mysql.cj.jdbc.Driver
+
+spring.jpa.hibernate.ddl-auto=create
